--- a/SWE project/Cafeteria Management System/Cafeteria Management System/Cafeteria Management System.csproj
+++ b/SWE project/Cafeteria Management System/Cafeteria Management System/Cafeteria Management System.csproj
@@ -77,6 +77,12 @@
     <Compile Include="dashboard.Designer.cs">
       <DependentUpon>dashboard.cs</DependentUpon>
     </Compile>
+    <Compile Include="firstForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="firstForm.Designer.cs">
+      <DependentUpon>firstForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -95,6 +101,9 @@
     <Compile Include="student.cs" />
     <EmbeddedResource Include="dashboard.resx">
       <DependentUpon>dashboard.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="firstForm.resx">
+      <DependentUpon>firstForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
